--- a/Sandbox/MessageFramework/Base.lproj/Main.storyboard
+++ b/Sandbox/MessageFramework/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="183.5" y="433" width="47" height="30"/>
                                 <state key="normal" title="Report"/>
                                 <connections>
-                                    <action selector="ReportTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dZT-co-Pla"/>
+                                    <action selector="reportTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EIc-Hm-RS2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -34,7 +34,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="77"/>
+            <point key="canvasLocation" x="18.840579710144929" y="76.339285714285708"/>
         </scene>
     </scenes>
     <resources>
