--- a/Sandbox/CoreLocationFramework/CoreLocationFramework/Base.lproj/Main.storyboard
+++ b/Sandbox/CoreLocationFramework/CoreLocationFramework/Base.lproj/Main.storyboard
@@ -15,13 +15,39 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="57" translatesAutoresizingMaskIntoConstraints="NO" id="NcY-f3-WJs">
+                                <rect key="frame" x="182.5" y="394" width="49" height="108.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o5d-ga-8Kz">
+                                        <rect key="frame" x="0.0" y="0.0" width="49" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YZQ-Bq-aTL">
+                                        <rect key="frame" x="0.0" y="77.5" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="actionSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="2BV-QQ-0n3"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NcY-f3-WJs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OG0-fb-EUC"/>
+                            <constraint firstItem="NcY-f3-WJs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jft-XA-iAl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="o5d-ga-8Kz" id="rvT-DS-gqv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="94"/>
+            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
         </scene>
     </scenes>
     <resources>
