--- a/Sandbox/MessageFramework/MessageFramework/Base.lproj/Main.storyboard
+++ b/Sandbox/MessageFramework/MessageFramework/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dJQ-sj-qd3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -40,41 +40,6 @@
             </objects>
             <point key="canvasLocation" x="1752" y="-204"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="Pa5-Vz-IhQ">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="dJQ-sj-qd3" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wx1-Aj-Ozx">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="8CC-q3-MJJ" kind="relationship" relationship="viewControllers" id="gy9-V8-p0O"/>
-                        <segue destination="rG8-kT-GIO" kind="relationship" relationship="viewControllers" id="e3n-oN-xyS"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Aj5-u4-kQq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="76.339285714285708"/>
-        </scene>
-        <!--My page-->
-        <scene sceneID="hgO-iA-DOr">
-            <objects>
-                <viewController id="dZJ-al-sa7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Hgw-vs-RGJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Bc5-PV-sRJ"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="My page" id="ute-MS-DWr"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eyS-iq-PNh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1729" y="459"/>
-        </scene>
         <!--Report-->
         <scene sceneID="rJB-Pn-1zf">
             <objects>
@@ -94,29 +59,8 @@
             </objects>
             <point key="canvasLocation" x="980" y="-203"/>
         </scene>
-        <!--My page-->
-        <scene sceneID="xz1-c8-qhR">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rG8-kT-GIO" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My page" image="house" catalog="system" selectedImage="house.fill" id="hvr-xH-jsN"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="x66-4X-LGA">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="dZJ-al-sa7" kind="relationship" relationship="rootViewController" id="eeD-J3-j9x"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PgC-mK-5g9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="980" y="459"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="house" catalog="system" width="128" height="106"/>
-        <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="megaphone" catalog="system" width="128" height="111"/>
         <image name="megaphone.fill" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
