--- a/CheongBit/CheongBit/Base.lproj/Main.storyboard
+++ b/CheongBit/CheongBit/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4Rf-4F-8H1">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ch5-fy-Di7">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -9,25 +9,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="BQf-8e-oU2">
-                                <rect key="frame" x="111" y="296.5" width="192" height="303"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="BQf-8e-oU2">
+                                <rect key="frame" x="58" y="219.33333333333334" width="274" height="375.33333333333326"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="micOff" translatesAutoresizingMaskIntoConstraints="NO" id="scd-YC-Lho">
-                                        <rect key="frame" x="0.0" y="0.0" width="192" height="192"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="274" height="274.33333333333331"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="scd-YC-Lho" secondAttribute="height" id="7Pv-eW-YOe"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TdG-eB-67Q">
-                                        <rect key="frame" x="57.5" y="226" width="77" height="77"/>
+                                        <rect key="frame" x="86.666666666666657" y="274.33333333333337" width="100.66666666666666" height="101"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="TdG-eB-67Q" secondAttribute="height" id="ul5-7t-pnp"/>
                                         </constraints>
@@ -38,31 +38,37 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l3c-IZ-TXa" customClass="reportButton" customModule="CheongBit" customModuleProvider="target">
+                                <rect key="frame" x="40" y="615.33333333333337" width="310" height="110.66666666666663"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="l3c-IZ-TXa" secondAttribute="height" multiplier="3.5:1.25" id="U15-kw-uiv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="45"/>
+                                <state key="normal" title="신고하기"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="TdG-eB-67Q" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.1" id="96i-eY-H90"/>
-                            <constraint firstItem="scd-YC-Lho" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.214286" id="Ref-p7-qr0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="l3c-IZ-TXa" secondAttribute="bottom" constant="35" id="57l-N6-NIK"/>
+                            <constraint firstItem="TdG-eB-67Q" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.15" id="96i-eY-H90"/>
+                            <constraint firstItem="scd-YC-Lho" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.325" id="Ref-p7-qr0"/>
+                            <constraint firstItem="l3c-IZ-TXa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TWX-ns-QvE"/>
                             <constraint firstItem="BQf-8e-oU2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UaW-eI-CEv"/>
-                            <constraint firstItem="BQf-8e-oU2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="z8V-it-keJ"/>
+                            <constraint firstItem="l3c-IZ-TXa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="nS3-Dx-4rh"/>
+                            <constraint firstItem="BQf-8e-oU2" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-15" id="z8V-it-keJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oHn-pG-tSY">
                         <nil key="title"/>
                         <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Yua-Ke-rKQ">
-                            <rect key="frame" x="118" y="7" width="178" height="30"/>
+                            <rect key="frame" x="106" y="7" width="178" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="성북구 성복동 5-9 ⌵"/>
                             <connections>
                                 <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3oA-qB-VeC"/>
                             </connections>
                         </button>
-                        <barButtonItem key="rightBarButtonItem" title="myPage" image="person.circle" catalog="system" id="jhi-HI-AKM">
-                            <connections>
-                                <segue destination="u3i-6O-i7C" kind="show" id="hqk-hG-nxv"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="micImage" destination="scd-YC-Lho" id="Xag-8q-feM"/>
@@ -71,31 +77,16 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="773.91304347826087" y="-309.375"/>
+            <point key="canvasLocation" x="1863" y="-833"/>
         </scene>
-        <!--내 프로필-->
-        <scene sceneID="XQe-dv-dQd">
-            <objects>
-                <viewController id="u3i-6O-i7C" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="2Dt-WX-O9H">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="XYF-mi-KLI"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="내 프로필" id="trm-O3-Ukf"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PaN-ek-bDD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1488" y="-309"/>
-        </scene>
-        <!--Navigation Controller-->
+        <!--홈-->
         <scene sceneID="ZR2-U6-cvP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Rf-4F-8H1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="홈" image="house" catalog="system" selectedImage="house.fill" id="kTJ-q8-odF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MNg-Jd-3oC">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" name="AccentColor"/>
@@ -107,12 +98,117 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="74F-XK-beC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-136.23188405797103" y="-309.375"/>
+            <point key="canvasLocation" x="951" y="-833"/>
+        </scene>
+        <!--친구 상태-->
+        <scene sceneID="HyM-kf-4Ca">
+            <objects>
+                <tableViewController id="NXf-oN-lAk" customClass="FriendsTableViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8xE-hC-fUL">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Q0a-V8-ZM0">
+                                <rect key="frame" x="0.0" y="24.333333969116211" width="390" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Q0a-V8-ZM0" id="rU3-yh-aGw">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="NXf-oN-lAk" id="Ytg-K6-qpP"/>
+                            <outlet property="delegate" destination="NXf-oN-lAk" id="0Dg-R5-pOq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="친구 상태" id="Bce-hv-XWc"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GTK-Ws-bZm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1860" y="-156"/>
+        </scene>
+        <!--My Page View Controller-->
+        <scene sceneID="JYM-jU-7E3">
+            <objects>
+                <viewController id="4ov-Uk-HFR" customClass="MyPageViewController" customModule="CheongBit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hsu-1t-xFf">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="pEv-x1-bHw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="8Aa-8q-Z4q"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fWU-CF-M1l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1877" y="549"/>
+        </scene>
+        <!--친구 상태-->
+        <scene sceneID="YoF-2j-y4I">
+            <objects>
+                <navigationController id="p6w-T7-U8h" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="친구 상태" image="person.2" catalog="system" selectedImage="person.2.fill" id="lgU-Tc-9LH"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qe3-eX-XLl">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="NXf-oN-lAk" kind="relationship" relationship="rootViewController" id="Elo-FH-iln"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="17Y-tP-NkJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="-156"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="XYP-CM-JKt">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ch5-fy-Di7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="J7d-BE-UhX">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="4Rf-4F-8H1" kind="relationship" relationship="viewControllers" id="bhn-rs-YpG"/>
+                        <segue destination="p6w-T7-U8h" kind="relationship" relationship="viewControllers" id="70o-gY-57n"/>
+                        <segue destination="t7v-MN-GOF" kind="relationship" relationship="viewControllers" id="r0A-1a-xaM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bub-9H-Y4p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-212" y="-23"/>
+        </scene>
+        <!--마이 페이지-->
+        <scene sceneID="2TU-wM-5V4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="t7v-MN-GOF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="마이 페이지" image="person.circle" catalog="system" selectedImage="person.circle.fill" id="w7e-2Y-zOX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="03f-Ur-OpY">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="4ov-Uk-HFR" kind="relationship" relationship="rootViewController" id="99m-Gm-m3e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ELt-vl-Jol" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="948" y="547"/>
         </scene>
     </scenes>
     <resources>
+        <image name="house" catalog="system" width="128" height="106"/>
+        <image name="house.fill" catalog="system" width="128" height="106"/>
         <image name="micOff" width="250" height="250"/>
+        <image name="person.2" catalog="system" width="128" height="81"/>
+        <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="switchOff" width="500" height="500"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
